# hakari-game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
client-discord/: CMakeLists.txt  main.cpp
client-gui/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/core/: UUID.h
core/src/: main.cpp
server/: CMakeLists.txt  main.cpp
